objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>LMTD_AMP_Re_Portico_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Re_Prop_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Re_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Re_Retail_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ti_Po_REPO__c</fullName>
        <label>LMTD - AMP - Tile Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ti_Prop_REPO__c</fullName>
        <label>LMTD - AMP - Tile Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ti_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Tile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Al_Comm_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Al_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ca_Other_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ca_Portico_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ca_Prop_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ca_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Cu_Po_REPO__c</fullName>
        <label>LR12 - AMP - Cushion Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Cu_Prop_REPO__c</fullName>
        <label>LR12 - AMP - Cushion Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Cu_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Cushion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ha_Po_REPO__c</fullName>
        <label>LR12 - AMP - Hardwood Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ha_Prop_REPO__c</fullName>
        <label>LR12 - AMP - Hardwood Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ha_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Hardwoo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ho_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Horizon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ka_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Karasta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_La_Po_REPO__c</fullName>
        <label>LR12 - AMP - Laminate Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_La_Prop_REPO__c</fullName>
        <label>LR12 - AMP - Laminate Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_La_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Laminat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Mainstreet_Com_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Mainstr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Prod_Cat_Other_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Other P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Re_Comm_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Re_Portico_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Re_Prop_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Re_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Re_Retail_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ti_Po_REPO__c</fullName>
        <label>LR12 - AMP - Tile Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ti_Prop_REPO__c</fullName>
        <label>LR12 - AMP - Tile Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LR12_AMP_Ti_REPO__c</fullName>
        <label>LR12 - Actual Mohawk Purchases - Tile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Al_Comm_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Al_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ca_Other_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ca_Portico_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ca_Prop_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ca_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Cu_Po_REPO__c</fullName>
        <label>LYTD - AMP - Cushion Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Cu_Prop_REPO__c</fullName>
        <label>LYTD - AMP - Cushion Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Cu_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Cushion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ha_Po_REPO__c</fullName>
        <label>LYTD - AMP - Hardwood Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ha_Prop_REPO__c</fullName>
        <label>LYTD - AMP - Hardwood Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ha_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Hardwoo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ho_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Horizon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ka_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Karasta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_La_Po_REPO__c</fullName>
        <label>LYTD - AMP - Laminate Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_La_Prop_REPO__c</fullName>
        <label>LYTD - AMP - Laminate Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_La_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Laminat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Mainstreet_Com_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Mainstr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Prod_Cat_Other_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Other P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Re_Comm_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Re_Portico_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Re_Prop_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Re_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Re_Retail_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ti_Po_REPO__c</fullName>
        <label>LYTD - AMP - Tile Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ti_Prop_REPO__c</fullName>
        <label>LYTD - AMP - Tile Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_AMP_Ti_REPO__c</fullName>
        <label>LYTD - Actual Mohawk Purchases - Tile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_MTD_sales__c</fullName>
        <label>Last MTD sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Rolling_12M_sales__c</fullName>
        <label>Last Rolling 12M sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_YTD_sales__c</fullName>
        <label>Last YTD sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Al_Comm_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Al_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ca_Other_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Carpet O</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ca_Portico_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Carpet P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ca_Prop_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Carpet P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ca_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Cu_Po_REPO__c</fullName>
        <label>MTD - AMP - Cushion Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Cu_Prop_REPO__c</fullName>
        <label>MTD - AMP - Cushion Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Cu_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Cushion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ha_Po_REPO__c</fullName>
        <label>MTD - AMP - Hardwood Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ha_Prop_REPO__c</fullName>
        <label>MTD - AMP - Hardwood Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ha_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Hardwood</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ho_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Horizon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ka_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Karastan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_La_Po_REPO__c</fullName>
        <label>MTD - AMP - Laminate Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_La_Prop_REPO__c</fullName>
        <label>MTD - AMP - Laminate Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_La_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Laminate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Mainstreet_Com_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Mainstre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Prod_Cat_Other_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Other Pr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Re_Comm_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Resilien</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Re_Portico_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Resilien</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Re_Prop_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Resilien</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Re_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Resilien</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Re_Retail_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Resilien</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ti_Po_REPO__c</fullName>
        <label>MTD - AMP - Tile Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ti_Prop_REPO__c</fullName>
        <label>MTD - AMP - Tile Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_AMP_Ti_REPO__c</fullName>
        <label>MTD - Actual Mohawk Purchases - Tile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales__c</fullName>
        <inlineHelpText>Indicates Month To Date Sales</inlineHelpText>
        <label>MTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_ACT__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Aladdin Commercial Total</description>
        <label>Act. Mohawk Purch. - Aladdin Comm Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_AC__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Aladdin Commm</description>
        <label>Actual Mohawk Purch. - Aladdin Comm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_A__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Aladdin</description>
        <label>Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_Car__c</fullName>
        <description>Multi-family Actual Mohawk Purchases - Carpet</description>
        <label>Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_Cus__c</fullName>
        <description>Multi-family Actual Mohawk Purchases - Cushion</description>
        <label>Actual Mohawk Purchases - Cushion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_Har__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Hardwood</description>
        <label>Actual Mohawk Purchases - Hardwood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_Hor__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Horizon</description>
        <label>Actual Mohawk Purchases - Horizon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_Kar__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Karastan</description>
        <label>Actual Mohawk Purchases - Karastan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_Lam__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Laminate</description>
        <label>Actual Mohawk Purchases - Laminate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_RC__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Resilient Comm</description>
        <label>Actual Mohawk Purch. - Resilient Comm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_RR__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Resilient Retail</description>
        <label>Actual Mohawk Purch. - Resilient Retail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_R__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Resilient</description>
        <label>Actual Mohawk Purchases - Resilient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_AMP_T__c</fullName>
        <description>Multi-family Actual Mohawk Purchases Tile</description>
        <label>Actual Mohawk Purchases - Tile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_Actual_Mohawk_Purchases_Total__c</fullName>
        <description>Multi-Family</description>
        <formula>M_AMP_Car__c +
M_AMP_Cus__c + 
M_AMP_Har__c +
M_AMP_Lam__c + 
M_AMP_R__c + 
M_AMP_T__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Mohawk Purchases Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_Business_Split__c</fullName>
        <formula>IF( Two_Sales_Teams__c  = true,  Primary_Business__r.Multi_Family_Business_Split_2Team__c ,  Primary_Business__r.Multi_Family_Business_Split_1team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Split Muti-Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Aladdin_Comm__c</fullName>
        <formula>IF(M_EWP_AC__c &gt;0,  M_AMP_AC__c / M_EWP_AC__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Aladdin Comm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Aladdin__c</fullName>
        <formula>if(M_EWP_A__c &gt; 0, M_AMP_A__c /  M_EWP_A__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Aladdin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Carpet__c</fullName>
        <formula>IF( M_EWP_Car__c &gt; 0 ,  M_AMP_Car__c /M_EWP_Car__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Carpet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Cushion__c</fullName>
        <formula>IF(M_EWP_Cus__c &gt; 0,  M_AMP_Cus__c /  M_EWP_Cus__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Cushion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Hardwood__c</fullName>
        <formula>IF(M_EWP_Har__c &gt; 0, M_AMP_Har__c / M_EWP_Har__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Hardwood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Horizon__c</fullName>
        <formula>IF(M_EWP_Hor__c &gt; 0  , M_AMP_Hor__c /  M_EWP_Hor__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Horizon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Karastan__c</fullName>
        <formula>IF(M_EWP_Kar__c &gt;0, M_AMP_Kar__c / M_EWP_Kar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Karastan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Laminate__c</fullName>
        <formula>IF(M_EWP_Lam__c &gt; 0, M_AMP_R__c /  M_EWP_Lam__c , 0)</formula>
        <label>Current Mohawk Share - Laminate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Resilient_Comm__c</fullName>
        <formula>IF(M_EWP_RC__c&gt;0, M_AMP_RC__c / M_EWP_RC__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Resilient Comm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Resilient_Retail__c</fullName>
        <formula>IF(M_EWP_RR__c &gt; 0, M_AMP_RR__c /   M_EWP_RR__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Resilient Retail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Resilient__c</fullName>
        <formula>IF(M_ERS_R__c  &gt; 0, M_AMP_R__c /  M_ERS_R__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Resilient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Tile__c</fullName>
        <formula>IF(M_EWP_T__c &gt; 0, M_AMP_T__c /  M_EWP_T__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share - Tile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Share_Total__c</fullName>
        <description>IF(M_Estimated_Wholesale_Purchases_Total__c  &gt; 0, M_Actual_Mohawk_Purchases_Total__c / M_Estimated_Wholesale_Purchases_Total__c , 0)</description>
        <formula>IF(M_EWP_Total__c  &gt; 0, M_Actual_Mohawk_Purchases_Total__c / M_EWP_Total__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Share Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Current_Mohawk_Shr_Aladdin_Comm_Total__c</fullName>
        <formula>IF(M_EWP_ACT__c &gt; 0, M_AMP_ACT__c /  M_EWP_ACT__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mohawk Shr. - Aladdin Comm Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Aladdin_Comm_Total__c</fullName>
        <label>Distribution % - Aladdin Comm Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Aladdin_Comm__c</fullName>
        <label>Distribution % - Aladdin Comm</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Aladdin__c</fullName>
        <label>Distribution % - Aladdin</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Carpet__c</fullName>
        <label>Distribution % - Carpet</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Cushion__c</fullName>
        <label>Distribution % - Cushion</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Hardwood__c</fullName>
        <label>Distribution % - Hardwood</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Horizon__c</fullName>
        <label>Distribution % - Horizon</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Karastan__c</fullName>
        <label>Distribution % - Karastan</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Laminate__c</fullName>
        <label>Distribution % - Laminate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Resilient_Comm__c</fullName>
        <label>Distribution % - Resilient Comm</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Resilient_Retail__c</fullName>
        <label>Distribution % - Resilient Retail</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Resilient__c</fullName>
        <label>Distribution % - Resilient</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Distribution_Tile__c</fullName>
        <label>Distribution % - Tile</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_ERS_Car__c</fullName>
        <description>Multi-Family</description>
        <label>Estimated Retail Sales-Carpet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_ERS_Cus__c</fullName>
        <description>Multi-Family</description>
        <label>Estimated Retail Sales - Cushion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_ERS_Har__c</fullName>
        <description>Multi-Family</description>
        <label>Estimated Retail Sales - Hardwood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_ERS_Lam__c</fullName>
        <description>Multi-Family</description>
        <label>Estimated Retail Sales - Laminate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_ERS_R__c</fullName>
        <description>Multi-Family</description>
        <label>Estimated Retail Sales-Resilient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>